# VideoApp

./: .gitignore  CMakeLists.txt  README.md
lib/FFmpeg/include/libavutil/: ffversion.h
lib/FFmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
src/: loadFrame.cpp  loadFrame_old.cpp  main - playback.cpp  main.cpp  main_old.cpp  video_reader.cpp  video_reader.hpp
